# fishml

./: Dockerfile  pyproject.toml
note/: Standard_Score.ipynb  fish.ipynb
src/fishmlserv/: data.py  main.py  prediction.py
tests/: test_pred.py
