[project]
name = "fishmlserv"
version = "1.1.0"
description = "Serving Machine Learning Model - using sklearn(KNeighborsClassifier) using FastApi, Fly.io"
authors = [
    {name = "baechu805", email = "bjoo606@naver.com"},
]
dependencies = [
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
    "matplotlib>=3.9.2",
]

[project.scripts]
ppping = 'fishmlserv.cli:ppping'
get-model-path = 'fishmlserv.cli:model_path'
pp = 'fishmlserv.cli:pp'
ppp = 'fishmlserv.cli:ppp'
